# cyberimmune-systems-example-traffic-light-kos

./: CMakeLists.txt  README.md
build_1/: CDiagnosticsMessage.cdl.nk.d  CMakeCache.txt  IDiagnosticsMessage.idl.h  IDiagnosticsMessage.idl.nk.d  LightsGPIO.edl.nk.d  Makefile  compile_commands.json
build_1/diagnostics/: Makefile
build_1/einit/: .gdbinit  .gdbinit.ide  Makefile
build_10/: cmake_install.cmake
build_10/einit/: kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.dtb  kos-qemu-image.map  kos-qemu-image.romfs  kos-qemu-image.stripped
build_10/lights_gpio/: LightsGPIO  cmake_install.cmake
build_11/control_system/: ControlSystem
build_11/einit/: kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.map  kos-qemu-image.romfs  kos-qemu-image.stripped
build_11/lights_gpio/: LightsGPIO  Makefile
build_12/: Diagnostics.edl.nk.d  DiagnosticsMessage.idl.h  Makefile  compile_commands.json
build_12/einit/: kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.map  kos-qemu-image.romfs  kos-qemu-image.stripped
build_12/lights_gpio/: LightsGPIO
build_2/: CMode.cdl.nk.d  Diagnostics.edl.nk.d
build_2/control_system/: Makefile  cmake_install.cmake
build_2/diagnostics/: Diagnostics  cmake_install.cmake
build_2/einit/: EinitQemu
build_2/klog_storage/: Makefile  cmake_install.cmake
build_2/lights_gpio/: LightsGPIO
build_3/: CMakeCache.txt  KlogEntity.edl.nk.d  KlogStorageEntity.edl.nk.d  Makefile  cmake_install.cmake
build_3/control_system/: ControlSystem
build_3/diagnostics/: Makefile  cmake_install.cmake
build_3/einit/: .gdbinit  cmake_install.cmake
build_3/klog_storage/: KlogStorageEntity
build_3/lights_gpio/: Makefile  cmake_install.cmake
build_7/: LightsGPIO.edl.nk.d
build_7/einit/: EinitQemu  kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.dtb  kos-qemu-image.map  kos-qemu-image.romfs  kos-qemu-image.stripped
build_7/lights_gpio/: LightsGPIO
build_9/einit/: .gdbinit.ide  Makefile  kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.map  kos-qemu-image.romfs  kos-qemu-image.stripped
build_9/lights_gpio/: LightsGPIO
build_old/: CMakeCache.txt  cmake_install.cmake
build_old/diagnostics/: Diagnostics
build_old/einit/: EinitQemu  kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.dtb  kos-qemu-image.map  kos-qemu-image.romfs  kos-qemu-image.stripped
build_old/lights_gpio/: LightsGPIO
build_old_4/control_system/: cmake_install.cmake
build_old_4/einit/: kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.map  kos-qemu-image.romfs  kos-qemu-image.stripped
build_old_4/lights_gpio/: LightsGPIO
build_x1/: CMode.cdl.nk.d  DiagnosticsMessage.idl.nk.d
build_x1/diagnostics/: Diagnostics
build_x1/einit/: kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.map  kos-qemu-image.romfs  kos-qemu-image.stripped
build_x1/lights_gpio/: LightsGPIO
build_x2/control_system/: Makefile
build_x2/einit/: cmake_install.cmake  kos-qemu-image  kos-qemu-image.dbg.syms  kos-qemu-image.map  kos-qemu-image.romfs  (+1 more)
diagnostics/: CMakeLists.txt
einit/: CMakeLists.txt
einit/src/: audit_policy.psl  init.yaml.in  klog_entity.c  security.psl
klog_storage/: CMakeLists.txt
resources/: CDiagnosticsMessage.cdl  Diagnostics.edl  DiagnosticsMessage.cdl  DiagnosticsMessage.idl  KlogStorageEntity.edl
(+31 files in other folders)
